fixed scrollbar styling for burger

--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -3,6 +3,8 @@
     margin: auto;
     height: 250px;
     overflow: scroll;
+    overflow-x: auto;
+    overflow-y: auto;
     text-align: center;
     font-weight: bold;
     font-size: 1.2rem;
